--- a/locales/ar/chat.json
+++ b/locales/ar/chat.json
@@ -20,7 +20,6 @@
   "duplicateTitle": "{{title}} نسخة",
   "historyRange": "نطاق التاريخ",
   "inbox": {
-    "defaultMessage": "مرحبًا، أنا مساعدك الذكي، يمكنك أن تسألني أي شيء وسأحاول الإجابة عليك. إذا كنت بحاجة إلى مساعد أكثر احترافية أو مخصصة، يمكنك النقر على `+` لإنشاء مساعد مخصص",
     "desc": "قم بتشغيل مجموعة الدماغ وأشعل شرارة التفكير. مساعدك الذكي، هنا حيث يمكنك التواصل بكل شيء",
     "title": "دردشة عشوائية"
   },
@@ -57,8 +56,8 @@
     "newGroup": "مجموعة جديدة",
     "rename": "إعادة تسمية المجموعة",
     "renameSuccess": "تمت إعادة التسمية بنجاح",
-    "sortSuccess": "تمت إعادة ترتيب الفئات بنجاح",
-    "sorting": "جاري تحديث ترتيب الفئات...",
+    "sortSuccess": "تمت إعادة ترتيب بنجاح",
+    "sorting": "جاري تحديث ترتيب المجموعة...",
     "tooLong": "يجب أن يكون طول اسم المجموعة بين 1 و 20"
   },
   "shareModal": {
