--- a/locales/en-US/chat.json
+++ b/locales/en-US/chat.json
@@ -8,7 +8,7 @@
   "clearCurrentMessages": "Clear current session messages",
   "confirmClearCurrentMessages": "You are about to clear the current session messages. Once cleared, they cannot be retrieved. Please confirm your action.",
   "confirmRemoveSessionItemAlert": "You are about to delete this agent. Once deleted, it cannot be retrieved. Please confirm your action.",
-  "confirmRemoveSessionSuccess": "Assistant removed successfully",
+  "confirmRemoveSessionSuccess": "Agent removed successfully",
   "defaultAgent": "Default Agent",
   "defaultList": "Default List",
   "defaultSession": "Default Agent",
@@ -20,7 +20,6 @@
   "duplicateTitle": "{{title}} Copy",
   "historyRange": "History Range",
   "inbox": {
-    "defaultMessage": "Hello, I'm your virtual agent. You can ask me anything, and I'll do my best to answer you. If you need a more professional or customized agent, click on `+` to create a custom agent.",
     "desc": "Activate the brain cluster and spark creative thinking. Your virtual agent is here to communicate with you about everything.",
     "title": "Just Chat"
   },
